feat(wallpaper): add support for random wallpaper type with picsum integration

--- a/src/options.html
+++ b/src/options.html
@@ -323,6 +323,9 @@
                 <button id="wallpaper-type-file-upload-button" class="rounded-md bg-neutral-800 py-2 outline-none hover:bg-neutral-700">
                   <span class="text-white">file-upload</span>
                 </button>
+                <button id="wallpaper-type-random-button" class="rounded-md bg-neutral-800 py-2 outline-none hover:bg-neutral-700">
+                  <span class="text-white">random</span>
+                </button>
                 <button id="wallpaper-type-solid-color-button" class="rounded-md bg-neutral-800 py-2 outline-none hover:bg-neutral-700">
                   <span class="text-white">solid-color</span>
                 </button>
@@ -378,6 +381,15 @@
               <div id="wallpaper-solid-color-section" class="grid">
                 <div class="grid gap-2">
                   <p class="text-base text-white">wallpaper.solidColors</p>
+                </div>
+              </div>
+              <div id="wallpaper-random-section" class="grid hidden">
+                <div class="grid gap-2">
+                  <p class="text-base text-white">wallpaper.random</p>
+                  <p class="text-base text-neutral-500">
+                    Random wallpapers are sourced from
+                    <a href="https://picsum.photos/" target="_blank" rel="noopener noreferrer" class="cursor-pointer text-blue-500 transition hover:text-blue-600">picsum.photos</a>
+                  </p>
                 </div>
               </div>
               <div class="grid gap-2">
