feat(wallpaper-credit): implement wallpaper credit display and improve styling

--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,9 @@
         </div>
       </div>
     </div>
+    <div id="wallpaper-credit-anchor" class="hidden">
+      <a id="wallpaper-credit-text" target="_blank" rel="noopener noreferrer"></a>
+    </div>
     <div id="options-button-container" class="fixed bottom-4 right-4"></div>
   </body>
 </html>
