feat(options): improve description on options page

--- a/src/options.html
+++ b/src/options.html
@@ -367,6 +367,9 @@
                 <div class="grid gap-2">
                   <p class="text-base text-white">wallpaper.random</p>
                   <p class="text-base text-neutral-500">
+                    You can hover your cursor in the bottom-left corner on the new tab page to see wallpaper credits.
+                    <br />
+                    <br />
                     Random wallpapers are sourced from
                     <a href="https://picsum.photos/" target="_blank" rel="noopener noreferrer" class="cursor-pointer text-blue-500 transition hover:text-blue-600">picsum.photos</a>
                   </p>
