--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
       </div>
     </div>
     <div id="wallpaper-credit-anchor" class="hidden">
-      <a id="wallpaper-credit-text" target="_blank" rel="noopener noreferrer"></a>
+      <a id="wallpaper-credit-text" class="corner-style" target="_blank" rel="noopener noreferrer"></a>
     </div>
     <div id="options-button-container" class="fixed bottom-4 right-4"></div>
   </body>
