fix(wallpaper): fix wallpaper preview with blur applied

--- a/src/options.html
+++ b/src/options.html
@@ -381,7 +381,9 @@
                 </div>
                 <div id="wallpaper-default-preview-section" class="rounded-md bg-neutral-800 p-2">
                   <div class="grid grid-cols-3 gap-2">
-                    <div id="wallpaper-default-preview-media" class="aspect-video rounded-md bg-cover bg-center" style="background-image: url(&quot;./assets/wallpapers/default.jpg&quot;)"></div>
+                    <div class="aspect-video overflow-hidden rounded-md">
+                      <div id="wallpaper-default-preview-media" class="h-full w-full bg-cover bg-center" style="background-image: url(&quot;./assets/wallpapers/default.jpg&quot;)"></div>
+                    </div>
                   </div>
                 </div>
                 <div id="wallpaper-reset-all-wrapper">
