feat(wallpaper): add ability to rotate between different wallpaper types

--- a/src/options.html
+++ b/src/options.html
@@ -329,6 +329,9 @@
                 <button id="wallpaper-type-solid-color-button" class="rounded-md bg-neutral-800 py-2 outline-none hover:bg-neutral-700">
                   <span class="text-white">solid-color</span>
                 </button>
+                <button id="wallpaper-type-mixed-button" class="rounded-md bg-neutral-800 py-2 outline-none hover:bg-neutral-700">
+                  <span class="text-white">mixed</span>
+                </button>
                 <button id="wallpaper-type-default-button" class="rounded-md bg-neutral-800 py-2 outline-none hover:bg-neutral-700">
                   <span class="text-white">default</span>
                 </button>
@@ -372,6 +375,16 @@
                     <br />
                     Random wallpapers are sourced from
                     <a href="https://picsum.photos/" target="_blank" rel="noopener noreferrer" class="cursor-pointer text-blue-500 transition hover:text-blue-600">picsum.photos</a>
+                  </p>
+                </div>
+              </div>
+              <div id="wallpaper-mixed-section" class="grid hidden">
+                <div class="grid gap-2">
+                  <p class="text-base text-white">wallpaper.mixed</p>
+                  <p class="text-base text-neutral-500">
+                    Mix URL, file-upload, and solid-color items in one rotation list.
+                    <br /><br />
+                    Note: mixed wallpapers are stored separately and are not included in config export/import.
                   </p>
                 </div>
               </div>
