fix(controls): fix issues with floating controls behavior

--- a/src/options.html
+++ b/src/options.html
@@ -1380,7 +1380,7 @@
                 </div>
               </div>
             </div>
-            <div id="bottom-of-page-sensor"></div>
+            <div id="bottom-of-page-sensor" class="h-px w-full"></div>
           </div>
           <div class="grid w-full grid-flow-row place-items-center gap-4">
             <div class="grid w-full grid-cols-[1fr_max-content_1fr] gap-2">
