fix(inputs): change blur strength and brightness inputs back to text type handling

--- a/src/options.html
+++ b/src/options.html
@@ -435,15 +435,7 @@
                   <p class="text-base text-white">wallpaper.filters.blur</p>
                   <div id="wallpaper-filters-blur-container" class="grid w-full grid-cols-[max-content_auto] rounded-md border-2 border-transparent bg-neutral-800 p-1 text-base">
                     <span class="select-none font-semibold text-pink-500">>&nbsp;</span>
-                    <input
-                      id="wallpaper-filters-blur-input"
-                      type="number"
-                      min="0"
-                      step="any"
-                      autocomplete="off"
-                      class="bg-transparent text-white placeholder-neutral-500 outline-none"
-                      placeholder="input blur..."
-                    />
+                    <input id="wallpaper-filters-blur-input" type="text" autocomplete="off" class="bg-transparent text-white placeholder-neutral-500 outline-none" placeholder="input blur..." />
                   </div>
                 </div>
               </div>
@@ -514,15 +506,7 @@
               <p class="text-base text-white">ui.blurStrength</p>
               <div id="ui-blur-strength-container" class="grid w-full grid-cols-[max-content_auto] rounded-md border-2 border-transparent bg-neutral-800 p-1 text-base">
                 <span class="select-none font-semibold text-pink-500">>&nbsp;</span>
-                <input
-                  id="ui-blur-strength-input"
-                  type="number"
-                  min="0"
-                  step="any"
-                  autocomplete="off"
-                  class="bg-transparent text-white placeholder-neutral-500 outline-none"
-                  placeholder="input blur strength..."
-                />
+                <input id="ui-blur-strength-input" type="text" autocomplete="off" class="bg-transparent text-white placeholder-neutral-500 outline-none" placeholder="input blur strength..." />
               </div>
             </div>
           </div>
