--- a/src/options.html
+++ b/src/options.html
@@ -1396,7 +1396,7 @@
         <div class="grid w-full grid-flow-row place-items-center gap-4">
           <div class="grid w-full grid-flow-row place-items-center">
             <div id="controls-container-placeholder" class="w-full">
-              <div id="controls-container" class="fixed bottom-4 hidden rounded-md border-2 border-emerald-500 bg-neutral-900 p-4 drop-shadow transition-none">
+              <div id="controls-container" class="controls-hidden fixed bottom-4 rounded-md border-2 border-emerald-500 bg-neutral-900 p-4 drop-shadow">
                 <div class="grid w-full grid-flow-row gap-2 lg:grid-cols-3">
                   <button id="save-button" class="cursor-pointer rounded-md bg-emerald-500 p-2 transition hover:bg-emerald-600">
                     <span class="text-base text-white">save</span>
